# deszo_english_app_annotation_quality_filter

./: .gitignore  LICENSE  README.md  pyproject.toml
annotation_quality_filter/: __init__.py  canonical_json.py  cli.py  errors.py  evaluator.py  fingerprint.py  issues.py  models.py  pipeline.py  public_api.py  runtime_metadata.py  schemas.py
annotation_quality_filter/_schemas/: annotation_quality_filter.v2.0.schema.json  annotation_quality_filter_diagnostics.v2.0.schema.json  annotation_quality_filter_test_manifest.v2.0.schema.json  stanza_annotator_diagnostics.v2.0.schema.json
annotation_quality_filter/core/: __init__.py  checkers.py  scoring.py  traversal.py
docs/: AnnotationQualityFilterSpec.v  architecture.en.md  architecture.md
docs/architecture/: annotation_quality_filter_architecture.md  stanza_input_alignment_note.md
docs/architecture/registry/: annotation_quality_filter_error_registry.v2.0.json  annotation_quality_filter_issue_registry.v2.0.json
docs/architecture/schema/: annotation_quality_filter_config.v2.0.schema.json  annotation_quality_filter_contract_test_manifest.v2.0.schema.json  annotation_quality_filter_effective_config.v2.0.schema.json  annotation_quality_filter_error_registry.v2.0.schema.json  annotation_quality_filter_expected_assertions.v2.0.schema.json  annotation_quality_filter_issue_registry.v2.0.schema.json  schema_catalog.v2.0.json  stanza_annotator.v2.0.schema.json  (+1 more)
docs/testing/: annotation_quality_filter_testing.md  contract_test_manifest.v2.0.json  preproduction_hardening_notes.md  production_readiness_notes.md  test_manifest.v2.0.json
docs/testing/expected/: README.md  (+11 more)
tests/: conftest.py  test_cli.py  test_contracts.py  test_evaluator.py  test_golden_failure.py  test_golden_success.py  test_schemas_load.py  test_traversal.py
(+82 files in other folders)
