[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "annotation-quality-filter"
version = "2.0.0"
description = "Annotation quality enricher for Stanza v2.0 linguistic annotations."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Deszo English App" }
]
keywords = ["nlp", "stanza", "universal-dependencies", "annotation-quality"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = [
  "jsonschema>=4"
]

[project.scripts]
annotation-quality-filter = "annotation_quality_filter.cli:main"

[tool.setuptools.packages.find]
include = ["annotation_quality_filter*"]

[tool.setuptools.package-data]
"annotation_quality_filter._schemas" = ["*.json"]
"annotation_quality_filter._registry" = ["*.json"]
